--- a/style.css
+++ b/style.css
@@ -13,3 +13,147 @@
   font-size: 13px;
   font-family: 'Manrope', sans-serif;
 }
+
+body {
+  min-height: 100vh;
+  width: 100vw;
+  background: linear-gradient(white, var(--light-grayish-blue));
+  display: flex;
+  align-items: center;
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.main__card {
+  width: 90%;
+  margin: auto;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.card__image {
+  width: 100%;
+  height: 200px;
+  background: url("/images/drawers.jpg");
+  background-size: cover;
+  background-position: center -20px;
+  background-repeat: no-repeat;
+}
+
+.card__content {
+  width: 100%;
+  padding: 30px;
+}
+
+.main__title {
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  color: var(--very-dark-grayish-blue);
+  margin-bottom: 15px;
+}
+
+.main__paragraph {
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  line-height: 1.6;
+  color: var(--desaturated-dark-blue);
+  margin-bottom: 15px;
+}
+
+.user__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0 0 0;
+}
+
+.profile__picture {
+  border-radius: 50%;
+  width: 40px;
+}
+
+.user__info {
+  margin-left: 15px;
+  margin-right: auto;
+}
+
+.secondary__title {
+  letter-spacing: 0.05em;
+  color: var(--very-dark-grayish-blue);
+  margin-bottom: 2px;
+}
+
+.secondary__paragraph {
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  color: var(--desaturated-dark-blue);
+}
+
+.share__button__container {
+  width: 35px;
+  height: 35px;
+  background: var(--light-grayish-blue);
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+
+  cursor: pointer;
+}
+
+.share__button {
+  margin: 0 auto 2px auto;
+}
+
+.attribution {
+  font-size: 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 15px;
+  font-size: .8rem;
+  color: var(--very-dark-grayish-blue);
+  text-align: center;
+}
+
+.attribution a {
+  text-decoration: none;
+  font-size: .8rem;
+  color: var(--desaturated-dark-blue);
+}
+
+@media screen and (min-width: 767px) {
+  .main__card {
+    max-width: 790.2px;
+    display: flex;
+    align-items: stretch;
+  }
+  .card__image {
+    height: auto;
+    width: 40%;
+    background-position: left;
+  }
+  .card__content {
+    width: 60%;
+  }
+  .main__title {
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (min-width: 770px) {
+  .main__title {
+    font-size: 1.4rem;
+  }
+  .main__paragraph {
+    font-size: 1.2rem;
+  }
+  .secondary__title {
+    font-size: 1.2rem;
+  }
+  .secondary__paragraph {
+    font-size: 1.2rem;
+  }
+}
